# quickbyte

./: .gitignore  README.md  package-lock.json  package.json  railway.json  vercel.json
.github/workflows/: build-desktop-transfer-app.yml  build-desktop-transfer.yml  build-release-transfer-app-common.yml  desktop-transfer-official-release.yml  desktop-transfer-preview-release.yml  desktop-transfer-rolling.yml  desktop-transfer-test-release.yml  main_quickbyte-test.yml
Quickbyte/: .gitignore  ApiClient.cs  AzureMultipartUploader.cs  AzureUploader.cs  Models.cs  Program.cs  Quickbyte.csproj  Quickbyte.sln  S3Uploader.cs  generate-random-file.js
common/: package.json  tsconfig.json
common/src/: concurrent-task-queue.ts  dtos.ts  index.ts  media-types.ts  models.ts  task-tracker.ts  util.ts
desktop/: AzureMultipartUploader.cs  Program.cs  generate-random-file.js  package-lock.json  package.json
desktop/gui/: .gitignore  README.md  config_override.json  env.d.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
desktop/gui/src-tauri/: .gitignore  Cargo.toml  env.example  tauri.conf.json
desktop/gui/src-tauri/icons/: icon.icns
desktop/gui/src-tauri/migrations/2024-08-28-041154_create_transfers/: up.sql
desktop/gui/src-tauri/migrations/2024-08-28-043235_create_files/: up.sql
desktop/gui/src-tauri/migrations/2024-08-28-044134_create_file_chunks/: down.sql  up.sql
desktop/gui/src-tauri/migrations/2024-08-28-055132_create_file_blocks/: down.sql  up.sql
desktop/gui/src-tauri/src/: app_context.rs  commands.rs  core.rs  event_bridge.rs  main.rs  message_channel.rs  quickbyte.rs  request_manager.rs  schema.rs
desktop/gui/src-tauri/src/auth/: auth_store.rs  google_auth.rs  mod.rs
desktop/gui/src-tauri/src/core/: app_context.rs  downloader.rs  dtos.rs  error.rs  event.rs  message_channel.rs  models.rs  request.rs  transfer_cancellation_tracker.rs  transfer_manager.rs  transfer_queue.rs  uploader.rs  util.rs
desktop/gui/src-tauri/src/persistence/: database.rs  db.rs  mod.rs  models.rs
desktop/gui/src-tauri/src/quickbyte/: downloader.rs  models.rs
desktop_old/: .gitignore  ApiClient.cs
docs/: 2023-12-08-brainstorming-user-model.md  2023-12-08-brainstroming-project-reviews.md  2023-12-10-transfers-media-files.md  2023-12-16-permissions-and-roles.md  2024-02-04-migrating-to-custom-auth.md  2024-03-14-folders.md  2024-03-30-media-play-back-vod.md  2024-04-15-share-project-files.md  2024-06-18-desktop-transfers.md  2024-10-21-payment-subscriptions-reboot.md
docs/incidents/: 2024-03-21-errors-accessing-s3-provider.md  (+1 more)
infra/: README.md
infra/terraform/: main.tf  (+3 more)
server/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
webapp/: .gitignore  README.md  components.d.ts  components.json  env.d.ts  env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.mts  vite.config.ts
website/: .firebaserc  README.txt  index.html
(+418 files in other folders)
